--- a/src/main/resources/config/config_uat.properties
+++ b/src/main/resources/config/config_uat.properties
@@ -28,6 +28,11 @@ com.viewcoder.oss.access.secret=Xd9SeeeKShIrnTAQkDdHHK0gOsfrubOeQZEWCMr+kV8=
 #设置Junit test创建project后是否即可删除
 com.viewcoder.project.test.integration=true
 
+#config查询资源剩余空间
+com.viewcoder.service.space.url=http://beansonbar.com/#/product
+#获邮件HTML文件的基路径
+com.viewcoder.mail.base.url=src/main/resources/mail/
+
 
 
 
