--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,16 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
+
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-surefire-plugin</artifactId>-->
+                <!--<version>2.19</version>-->
+                <!--<configuration>-->
+                    <!--<parallel>methods</parallel>-->
+                    <!--<threadCount>5</threadCount>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
         </plugins>
     </build>
 
@@ -239,8 +249,6 @@
             <artifactId>selenium-java</artifactId>
             <version>3.11.0</version>
         </dependency>
-
-
-
     </dependencies>
+
 </project>
