--- a/pom.xml
+++ b/pom.xml
@@ -69,69 +69,69 @@
             <artifactId>commons-io</artifactId>
             <version>1.4</version>
         </dependency>
-        <dependency>
-            <groupId>org.openoffice</groupId>
-            <artifactId>juh</artifactId>
-            <version>3.2.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.openoffice</groupId>
-            <artifactId>ridl</artifactId>
-            <version>3.2.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.openoffice</groupId>
-            <artifactId>unoil</artifactId>
-            <version>3.2.1</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.openoffice</groupId>-->
+            <!--<artifactId>juh</artifactId>-->
+            <!--<version>3.2.1</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.openoffice</groupId>-->
+            <!--<artifactId>ridl</artifactId>-->
+            <!--<version>3.2.1</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.openoffice</groupId>-->
+            <!--<artifactId>unoil</artifactId>-->
+            <!--<version>3.2.1</version>-->
+        <!--</dependency>-->
 
         <!-- Optional dependencies -->
-        <dependency>
-            <!-- for the command line tool -->
-            <groupId>commons-cli</groupId>
-            <artifactId>commons-cli</artifactId>
-            <version>1.1</version>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <!-- for more robust process management -->
-            <groupId>org.hyperic</groupId>
-            <artifactId>sigar</artifactId>
-            <version>1.6.5.132</version>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <!-- for JSON configuration -->
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-            <version>20090211</version>
-            <optional>true</optional>
-        </dependency>
+        <!--<dependency>-->
+            <!--&lt;!&ndash; for the command line tool &ndash;&gt;-->
+            <!--<groupId>commons-cli</groupId>-->
+            <!--<artifactId>commons-cli</artifactId>-->
+            <!--<version>1.1</version>-->
+            <!--<optional>true</optional>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--&lt;!&ndash; for more robust process management &ndash;&gt;-->
+            <!--<groupId>org.hyperic</groupId>-->
+            <!--<artifactId>sigar</artifactId>-->
+            <!--<version>1.6.5.132</version>-->
+            <!--<optional>true</optional>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--&lt;!&ndash; for JSON configuration &ndash;&gt;-->
+            <!--<groupId>org.json</groupId>-->
+            <!--<artifactId>json</artifactId>-->
+            <!--<version>20090211</version>-->
+            <!--<optional>true</optional>-->
+        <!--</dependency>-->
         <!--  CommonTest dependencies -->
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>6.0.1</version>
-            <scope>test</scope>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.testng</groupId>-->
+            <!--<artifactId>testng</artifactId>-->
+            <!--<version>6.0.1</version>-->
+            <!--<scope>test</scope>-->
+        <!--</dependency>-->
         <!-- https://mvnrepository.com/artifact/com.artofsolving/jodconverter-maven-plugin -->
-        <dependency>
-            <groupId>com.artofsolving</groupId>
-            <artifactId>jodconverter-maven-plugin</artifactId>
-            <version>2.2.1</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.fusesource/sigar -->
-        <dependency>
-            <groupId>org.fusesource</groupId>
-            <artifactId>sigar</artifactId>
-            <version>1.6.4</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.artofsolving</groupId>-->
+            <!--<artifactId>jodconverter-maven-plugin</artifactId>-->
+            <!--<version>2.2.1</version>-->
+        <!--</dependency>-->
+        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.fusesource/sigar &ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>org.fusesource</groupId>-->
+            <!--<artifactId>sigar</artifactId>-->
+            <!--<version>1.6.4</version>-->
+        <!--</dependency>-->
         <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
-        <dependency>
-            <groupId>redis.clients</groupId>
-            <artifactId>jedis</artifactId>
-            <version>2.9.0</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>redis.clients</groupId>-->
+            <!--<artifactId>jedis</artifactId>-->
+            <!--<version>2.9.0</version>-->
+        <!--</dependency>-->
 
         <!-- https://mvnrepository.com/artifact/junit/junit -->
         <!--for test module use 用在test模块中-->
@@ -148,23 +148,23 @@
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.5.5</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.apache.httpcomponents</groupId>-->
+            <!--<artifactId>httpclient</artifactId>-->
+            <!--<version>4.5.5</version>-->
+        <!--</dependency>-->
         <!-- Apache HttpClient Mime -->
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpmime</artifactId>
-            <version>4.5.3</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.apache.httpcomponents</groupId>-->
+            <!--<artifactId>httpmime</artifactId>-->
+            <!--<version>4.5.3</version>-->
+        <!--</dependency>-->
         <!-- https://mvnrepository.com/artifact/org.jdom/jdom -->
-        <dependency>
-            <groupId>org.jdom</groupId>
-            <artifactId>jdom</artifactId>
-            <version>1.1.3</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.jdom</groupId>-->
+            <!--<artifactId>jdom</artifactId>-->
+            <!--<version>1.1.3</version>-->
+        <!--</dependency>-->
 
         <!--Task Jobs-->
         <dependency>
@@ -182,13 +182,14 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.9</version>
+            <version>1.5.5</version>
         </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>1.7.5</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.slf4j</groupId>-->
+            <!--<artifactId>slf4j-simple</artifactId>-->
+            <!--<version>1.7.9</version>-->
+        <!--</dependency>-->
+
 
         <!--JAX for analyse XML 解析XML-->
         <dependency>
@@ -249,6 +250,14 @@
             <artifactId>selenium-java</artifactId>
             <version>3.11.0</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.ehcache/ehcache -->
+        <dependency>
+            <groupId>org.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+            <version>3.4.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
