--- a/pom.xml
+++ b/pom.xml
@@ -40,16 +40,6 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
-
-            <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-surefire-plugin</artifactId>-->
-                <!--<version>2.19</version>-->
-                <!--<configuration>-->
-                    <!--<parallel>methods</parallel>-->
-                    <!--<threadCount>5</threadCount>-->
-                <!--</configuration>-->
-            <!--</plugin>-->
         </plugins>
     </build>
 
@@ -62,77 +52,16 @@
             <version>4.1.4.Final</version>
         </dependency>
 
-        <!--open office change dependency-->
-        <!--Required dependencies -->
+
+        <!--PSD解析时候使用-->
         <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>1.4</version>
+            <!-- for JSON configuration -->
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20090211</version>
+            <optional>true</optional>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.openoffice</groupId>-->
-            <!--<artifactId>juh</artifactId>-->
-            <!--<version>3.2.1</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.openoffice</groupId>-->
-            <!--<artifactId>ridl</artifactId>-->
-            <!--<version>3.2.1</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.openoffice</groupId>-->
-            <!--<artifactId>unoil</artifactId>-->
-            <!--<version>3.2.1</version>-->
-        <!--</dependency>-->
-
-        <!-- Optional dependencies -->
-        <!--<dependency>-->
-            <!--&lt;!&ndash; for the command line tool &ndash;&gt;-->
-            <!--<groupId>commons-cli</groupId>-->
-            <!--<artifactId>commons-cli</artifactId>-->
-            <!--<version>1.1</version>-->
-            <!--<optional>true</optional>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--&lt;!&ndash; for more robust process management &ndash;&gt;-->
-            <!--<groupId>org.hyperic</groupId>-->
-            <!--<artifactId>sigar</artifactId>-->
-            <!--<version>1.6.5.132</version>-->
-            <!--<optional>true</optional>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--&lt;!&ndash; for JSON configuration &ndash;&gt;-->
-            <!--<groupId>org.json</groupId>-->
-            <!--<artifactId>json</artifactId>-->
-            <!--<version>20090211</version>-->
-            <!--<optional>true</optional>-->
-        <!--</dependency>-->
         <!--  CommonTest dependencies -->
-        <!--<dependency>-->
-            <!--<groupId>org.testng</groupId>-->
-            <!--<artifactId>testng</artifactId>-->
-            <!--<version>6.0.1</version>-->
-            <!--<scope>test</scope>-->
-        <!--</dependency>-->
-        <!-- https://mvnrepository.com/artifact/com.artofsolving/jodconverter-maven-plugin -->
-        <!--<dependency>-->
-            <!--<groupId>com.artofsolving</groupId>-->
-            <!--<artifactId>jodconverter-maven-plugin</artifactId>-->
-            <!--<version>2.2.1</version>-->
-        <!--</dependency>-->
-        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.fusesource/sigar &ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>org.fusesource</groupId>-->
-            <!--<artifactId>sigar</artifactId>-->
-            <!--<version>1.6.4</version>-->
-        <!--</dependency>-->
-        <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
-        <!--<dependency>-->
-            <!--<groupId>redis.clients</groupId>-->
-            <!--<artifactId>jedis</artifactId>-->
-            <!--<version>2.9.0</version>-->
-        <!--</dependency>-->
-
         <!-- https://mvnrepository.com/artifact/junit/junit -->
         <!--for test module use 用在test模块中-->
         <dependency>
@@ -141,30 +70,25 @@
             <version>4.8.1</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.5</version>
-        </dependency>
-
+        <!--http请求及包装时使用，微信支付等-->
         <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
-        <!--<dependency>-->
-            <!--<groupId>org.apache.httpcomponents</groupId>-->
-            <!--<artifactId>httpclient</artifactId>-->
-            <!--<version>4.5.5</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.5</version>
+        </dependency>
         <!-- Apache HttpClient Mime -->
-        <!--<dependency>-->
-            <!--<groupId>org.apache.httpcomponents</groupId>-->
-            <!--<artifactId>httpmime</artifactId>-->
-            <!--<version>4.5.3</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpmime</artifactId>
+            <version>4.5.3</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.jdom/jdom -->
-        <!--<dependency>-->
-            <!--<groupId>org.jdom</groupId>-->
-            <!--<artifactId>jdom</artifactId>-->
-            <!--<version>1.1.3</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.jdom</groupId>
+            <artifactId>jdom</artifactId>
+            <version>1.1.3</version>
+        </dependency>
 
         <!--Task Jobs-->
         <dependency>
@@ -184,11 +108,6 @@
             <artifactId>slf4j-api</artifactId>
             <version>1.5.5</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.slf4j</groupId>-->
-            <!--<artifactId>slf4j-simple</artifactId>-->
-            <!--<version>1.7.9</version>-->
-        <!--</dependency>-->
 
 
         <!--JAX for analyse XML 解析XML-->
@@ -228,35 +147,38 @@
             <artifactId>aliyun-java-sdk-dysmsapi</artifactId>
             <version>1.1.0</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>commons-httpclient</groupId>-->
-            <!--<artifactId>commons-httpclient</artifactId>-->
-            <!--<version>3.1</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>commons-codec</groupId>-->
-            <!--<artifactId>commons-codec</artifactId>-->
-            <!--<version>1.4</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>commons-logging</groupId>-->
-            <!--<artifactId>commons-logging</artifactId>-->
-            <!--<version>1.2</version>-->
-        <!--</dependency>-->
+
 
         <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>3.11.0</version>
+            <version>3.12.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.codeborne/phantomjsdriver -->
+        <dependency>
+            <groupId>com.codeborne</groupId>
+            <artifactId>phantomjsdriver</artifactId>
+            <version>1.4.4</version>
         </dependency>
 
+
+        <!--本地缓存使用-->
         <!-- https://mvnrepository.com/artifact/org.ehcache/ehcache -->
         <dependency>
             <groupId>org.ehcache</groupId>
             <artifactId>ehcache</artifactId>
             <version>3.4.0</version>
         </dependency>
+
+        <!--写Pool的工具-->
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-pool2 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+
 
     </dependencies>
 
