--- a/src/main/resources/config/config_prod.properties
+++ b/src/main/resources/config/config_prod.properties
@@ -36,7 +36,7 @@ com.viewcoder.msg.regionId=cn-hangzhou
 #设置Junit test创建project后是否即可删除
 com.viewcoder.project.test.integration=true
 
-#config查询资源剩余空间
+#config查询资源剩余空间，该配置是发邮件内容
 com.viewcoder.service.space.url=http://beansonbar.com/#/product
 #邮件发送配置操作
 com.viewcoder.mail.base.url=src/main/resources/html/
@@ -48,6 +48,26 @@ com.viewcoder.mail.protocol=smtp
 com.viewcoder.mail.port=465
 com.viewcoder.mail.auth=true
 com.viewcoder.mail.timeout=10000
+
+#设置WebDriver的Common-pool2的配置
+#webdriver的位置
+com.viewcoder.webdriver.location=E:/platformjs/phantomjs-2.1.1-windows/bin/phantomjs.exe
+#设置page load的timeout时间
+com.viewcoder.webdriver.timeout.pageload=20
+#最大同时active资源数
+com.viewcoder.webdriver.max.active=10
+#最小idle资源数，该数目会
+com.viewcoder.webdriver.min.idle=1
+#numTestsPerEvictionRun当连接池资源耗尽时，调用者最大阻塞的时间，超时将跑出异常。单位，毫秒数;默认为-1.表示永不超时.
+com.viewcoder.webdriver.max.wait=5000
+#timeBetweenEvictionRunsMillis:  “空闲链接”检测线程，检测的周期，毫秒数，如果为负值，表示不运行“检测线程”。默认为-1.
+com.viewcoder.webdriver.check.time=3000
+#每次“空闲链接”检测线程运行监测资源的数目
+com.viewcoder.webdriver.check.num=5
+
+
+
+
 
 
 
