--- a/src/main/resources/config/config_uat.properties
+++ b/src/main/resources/config/config_uat.properties
@@ -27,11 +27,18 @@ com.viewcoder.oss.access.secret=Xd9SeeeKShIrnTAQkDdHHK0gOsfrubOeQZEWCMr+kV8=
 #config copy project and delete project
 #设置Junit test创建project后是否即可删除
 com.viewcoder.project.test.integration=true
-
-#config查询资源剩余空间
+#config查询资源剩余空间，该配置是发邮件内容
 com.viewcoder.service.space.url=http://beansonbar.com/#/product
 #获邮件HTML文件的基路径
 com.viewcoder.mail.base.url=src/main/resources/mail/
+
+#
+
+
+
+
+
+
 
 
 
