--- a/src/main/resources/config/config_prod.properties
+++ b/src/main/resources/config/config_prod.properties
@@ -7,6 +7,7 @@ com.viewcoder.file.http.base.url=http://viewcoder-bucket.oss-cn-shenzhen.aliyunc
 com.viewcoder.file.portrait_img=portrait_img
 com.viewcoder.file.multi_export=multi_export
 com.viewcoder.file.single_export=single_export
+com.viewcoder.file.project_data=project_data
 com.viewcoder.file.upload_files=upload_files
 com.viewcoder.file.psd_parse_error=psd_parse_error
 
@@ -57,7 +58,7 @@ com.viewcoder.webdriver.timeout.pageload=20
 #最大同时active资源数
 com.viewcoder.webdriver.max.active=10
 #最小idle资源数，该数目会
-com.viewcoder.webdriver.min.idle=1
+com.viewcoder.webdriver.min.idle=0
 #numTestsPerEvictionRun当连接池资源耗尽时，调用者最大阻塞的时间，超时将跑出异常。单位，毫秒数;默认为-1.表示永不超时.
 com.viewcoder.webdriver.max.wait=5000
 #timeBetweenEvictionRunsMillis:  “空闲链接”检测线程，检测的周期，毫秒数，如果为负值，表示不运行“检测线程”。默认为-1.
