--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,16 +1,61 @@
-log4j.properties,
-log4j.rootLogger=DEBUG,Console
-#Console
-log4j.appender.Console=org.apache.log4j.ConsoleAppender
-log4j.appender.Console.layout=org.apache.log4j.PatternLayout
-log4j.appender.Console.layout.ConversionPattern=%d [%t] %-5p [%c] - %m%n
-log4j.logger.java.sql.ResultSet=DEBUG
-log4j.logger.org.apache=DEBUG
-log4j.logger.java.sql.Connection=DEBUG
-log4j.logger.java.sql.Statement=DEBUG
-log4j.logger.java.sql.PreparedStatement=DEBUG
+#log4j.properties,
+#log4j.rootLogger=DEBUG,Console
+##Console
+#log4j.appender.logTest.File=/logs/LogTest/logTest.log
+#log4j.appender.Console=org.apache.log4j.ConsoleAppender
+#log4j.appender.Console.layout=org.apache.log4j.PatternLayout
+#log4j.appender.Console.layout.ConversionPattern=%d [%t] %-5p [%c] - %m%n
+#log4j.logger.java.sql.ResultSet=DEBUG
+#log4j.logger.org.apache=DEBUG
+#log4j.logger.java.sql.Connection=DEBUG
+#log4j.logger.java.sql.Statement=DEBUG
+#log4j.logger.java.sql.PreparedStatement=DEBUG
+#log4j.logger.com.ibatis=DEBUG
+#log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=DEBUG
+#log4j.logger.com.ibatis.common.jdbc.ScriptRunner=DEBUG
+#log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG
+
+### set log levels ###  OFF、FATAL、ERROR、WARN、INFO、DEBUG、ALL
+log4j.rootLogger = DEBUG,Console,DFileDay,EFile
+
+### console ###
+log4j.appender.Console = org.apache.log4j.ConsoleAppender
+log4j.appender.Console.Target = System.out
+log4j.appender.Console.Threshold = DEBUG
+log4j.appender.Console.layout = org.apache.log4j.PatternLayout
+log4j.appender.Console.layout.ConversionPattern = [%p] [%-d{yyyy-MM-dd HH:mm:ss}] %C.%M(%L) | %m%n
+
+### log file each 20M ###
+#log4j.appender.DFileSize=org.apache.log4j.RollingFileAppender
+#log4j.appender.DFileSize.MaxFileSize=20MB
+#log4j.appender.DFileSize.MaxBackupIndex=10
+#log4j.appender.DFileSize.File=../logs/common_log_size.log
+#log4j.appender.DFileSize.layout=org.apache.log4j.PatternLayout
+#log4j.appender.DFileSize.layout.ConversionPattern=%-4r %d{yyyy-MM-dd HH\:mm\:ss,SSS} [%t] %-5p %c - %m%n
+
+### log file each day###
+log4j.appender.DFileDay = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.DFileDay.File =../logs/common_log_day.log
+log4j.appender.DFileDay.Append = true
+log4j.appender.DFileDay.Threshold = DEBUG
+log4j.appender.DFileDay.layout = org.apache.log4j.PatternLayout
+log4j.appender.DFileDay.layout.ConversionPattern = [%p] [%-d{yyyy-MM-dd HH:mm:ss}] %C.%M(%L) | %m%n
+
+### exception ###
+log4j.appender.EFile = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.EFile.File = ../logs/error_log.log
+log4j.appender.EFile.Append = true
+log4j.appender.EFile.Threshold = WARN
+log4j.appender.EFile.layout = org.apache.log4j.PatternLayout
+log4j.appender.EFile.layout.ConversionPattern = [%p] [%-d{yyyy-MM-dd HH:mm:ss}] %C.%M(%L) | %m%n
+
 log4j.logger.com.ibatis=DEBUG
 log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=DEBUG
 log4j.logger.com.ibatis.common.jdbc.ScriptRunner=DEBUG
 log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG
-
+log4j.logger.org.apache=DEBUG
+log4j.logger.org.mybatis=DEBUG
+log4j.logger.java.sql.Connection=DEBUG
+log4j.logger.java.sql.Statement=DEBUG
+log4j.logger.java.sql.PreparedStatement=DEBUG
+log4j.logger.java.sql.ResultSet=DEBUG
