--- a/src/main/resources/config/dev/db-dev.properties
+++ b/src/main/resources/config/dev/db-dev.properties
@@ -3,9 +3,9 @@ driver=com.mysql.jdbc.Driver
 #username=r0kp7vzu46a9h1k5
 #password=intellectual
 
-url=jdbc:mysql://rm-2ze7293154b3khhn2i.mysql.rds.aliyuncs.com:3306/viewcoder_front
-username=beanson
-password=2016BeansonBar
+url=jdbc:mysql://localhost:3306/viewcoder_front?serverTimezone=UTC&characterEncoding=utf-8
+username=root
+password=Liphin1364*
 
 
 #connection pool settings
