baseline 2018/7/18 night --> 添加feedback后台数据接收操作

--- a/src/main/resources/config/dev/config_dev.properties
+++ b/src/main/resources/config/dev/config_dev.properties
@@ -10,6 +10,7 @@ com.viewcoder.file.single_export=single_export
 com.viewcoder.file.project_data=project_data
 com.viewcoder.file.upload_files=upload_files
 com.viewcoder.file.psd_parse_error=psd_parse_error
+com.viewcoder.file.feedback=feedback
 
 #config redis
 com.viewcoder.redis.host=localhost
