--- a/src/main/resources/config/prod/config_prod.properties
+++ b/src/main/resources/config/prod/config_prod.properties
@@ -10,6 +10,7 @@ com.viewcoder.file.single_export=single_export
 com.viewcoder.file.project_data=project_data
 com.viewcoder.file.upload_files=upload_files
 com.viewcoder.file.psd_parse_error=psd_parse_error
+com.viewcoder.file.feedback=feedback
 
 #config redis
 com.viewcoder.redis.host=localhost
