update file properties

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 ### set log levels ###  OFF、FATAL、ERROR、WARN、INFO、DEBUG、ALL
-log4j.rootLogger = DEBUG,Console,DFileDay,EFile
+log4j.rootLogger = DEBUG,Console,DFileSize,EFile
 
 ### console ###
 log4j.appender.Console = org.apache.log4j.ConsoleAppender
