--- a/src/main/resources/config/prod/config_prod.properties
+++ b/src/main/resources/config/prod/config_prod.properties
@@ -18,9 +18,9 @@ com.viewcoder.redis.port=6379
 com.viewcoder.redis.timeout=10
 com.viewcoder.redis.pass=admin
 
-#阿里云key配置
-com.viewcoder.aliyun.access.key=cTRwanhxYWJBQ0hLMldFNQ==
-com.viewcoder.aliyun.access.secret=eUYzTDZJYkhUbWE2UWJnZm9wTGNKNEpGMmN2U2JK
+#阿里云子账号key和secret
+com.viewcoder.aliyun.access.key=TFRBSW85aFR2c2J6TTR1Uw==
+com.viewcoder.aliyun.access.secret=QlhKNEZnNXN2YnRpTmgxVHl4U08zN2VoZE1wU25K
 
 #阿里云OSS服务
 com.viewcoder.oss.endpoint.outer=oss-cn-shenzhen.aliyuncs.com
