--- a/src/main/resources/config/prod/db_prod.properties
+++ b/src/main/resources/config/prod/db_prod.properties
@@ -1,4 +1,4 @@
-driver=com.mysql.jdbc.Driver
+driver=com.mysql.cj.jdbc.Driver
 #url=jdbc:mysql://rdsmo85ayg2u71w33zez.mysql.rds.aliyuncs.com:3306/r0kp7vzu46a9h1k5
 #username=r0kp7vzu46a9h1k5
 #password=intellectual
