--- a/src/main/resources/config/prod/config_prod.properties
+++ b/src/main/resources/config/prod/config_prod.properties
@@ -44,8 +44,8 @@ com.viewcoder.service.space.url=http://beansonbar.com/#/product
 com.viewcoder.mail.base.url=src/main/resources/html/
 com.viewcoder.mail.host=smtp.exmail.qq.com
 com.viewcoder.mail.username=\u83b1\u82ac\u79d1\u6280
-com.viewcoder.mail.from=system@beansonbar.com
-com.viewcoder.mail.pass=TGlwaGluXzEzNzVfU2VydmljZQ==
+com.viewcoder.mail.from=system@liphin.com
+com.viewcoder.mail.pass=bGFpZmVuXzEzNzVfU2VydmljZQ==
 com.viewcoder.mail.protocol=smtp
 com.viewcoder.mail.port=465
 com.viewcoder.mail.auth=true
