--- a/pom.xml
+++ b/pom.xml
@@ -192,6 +192,13 @@
             <artifactId>jaxb-impl</artifactId>
             <version>2.2.3</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.thoughtworks.xstream/xstream -->
+        <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>1.4.10</version>
+        </dependency>
+
 
         <!--send html, JAVA 发送邮件-->
         <dependency>
