--- a/src/main/resources/config/prod/config_prod.properties
+++ b/src/main/resources/config/prod/config_prod.properties
@@ -39,7 +39,7 @@ com.viewcoder.msg.regionId=cn-hangzhou
 com.viewcoder.project.test.integration=true
 
 #config查询资源剩余空间，该配置是发邮件内容
-com.viewcoder.service.space.url=http://beansonbar.com/#/product
+com.viewcoder.service.space.url=http://beansonbar.com:3030/#/product
 #邮件发送配置操作
 com.viewcoder.mail.base.url=src/main/resources/html/
 com.viewcoder.mail.host=smtp.exmail.qq.com
